--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -14,9 +14,9 @@ My Blog
 <section id="welcome">
   <header>
     <img src="{% static 'blog/images/ryan.jpg' %}" alt="Aaryan - The Author of This Blog" />
-    <h2>Ryan's Blog</h2>
+    <h2>Aaryan's Blog</h2>
   </header>
-  <p>Hi, I am Ryan and I love to blog about tech and the world!</p>
+  <p>Hi, I am Aaryan and I love to blog about tech and the world!</p>
 </section>
 
 <section id="latest-posts">
